# ai-workflow-mapper

./: .gitignore  AGENTS.md  AGENT_GUIDE.md  CHANGELOG.md  IMPLEMENTATION_NOTES.md  README.md  acceptance.md  demo_script.md  eval_report.md  openapi.yaml  pyproject.toml  specification_ai_workflow_mapper.md
eval/: golden_answers.json  rubric.md  run_eval.md
examples/: report.example.md  request.example.json  response.example.json
fixtures/: README.md
fixtures/adversarial/: README.md
fixtures/automation/: synthetic_data_entry_task.json  synthetic_notification_task.json  synthetic_rule_based_task.json
fixtures/bottlenecks/: synthetic_queue_graph.json  synthetic_spof_graph.json
fixtures/diagrams/: sample_process_graph.json
fixtures/golden/: README.md  case_001_load_txt.json  case_002_load_pdf.json  case_003_load_docx.json  case_004_unsupported_type.json
fixtures/redundancies/: synthetic_duplicate_approval.json  synthetic_duplicate_data_entry.json  synthetic_overlapping_roles.json
fixtures/simple/: request.example.json
ops/: deployment.md  env.example  runbook.md
schemas/: README.md  analysis_findings.schema.json  audit_log.schema.json  citation.schema.json  config.schema.json  diagram_artifact.schema.json  errors.schema.json  input.schema.json  job_error_result.schema.json  job_options.schema.json  output.schema.json  process_extraction.schema.json  process_graph.schema.json  workflow_input.schema.json  workflow_result.schema.json
shared_modules/: README.md  module_index.json  shared_platform.md
shared_modules/document_loader/: README.md  contract.md
shared_modules/evaluation_harness/: README.md  contract.md
shared_modules/llm_adapter/: README.md  contract.md
shared_modules/report_renderer/: README.md  contract.md
tests/api/: test_api.py  test_processor.py  test_processor_automation.py  test_processor_bottlenecks.py  test_processor_report.py  (+1 more)
(+99 files in other folders)
