[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-workflow-mapper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "pydantic",
  "httpx",
  "anthropic>=0.40.0",
  "jinja2>=3.1.0",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "python-dotenv>=1.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "jsonschema",
  "pytest-mock>=3.14.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
workflow-mapper-submit = "ai_workflow_mapper.cli.submit_job:main"
workflow-mapper-analyze-bottlenecks = "ai_workflow_mapper.cli.analyze_bottlenecks:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
